# python-test-tutrial

./: pyproject.toml  tox.ini
.github/workflows/: python-app.yml
src/: __init__.py  item.py  main.py
tests/: __init__.py  test_item.py  test_main.py  test_python_test_sample.py
