[tool.poetry]
name = "python-test-sample"
version = "0.1.0"
description = ""
authors = ["atsuki shirasawa <3out.change0.20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"
black = "^22.6.0"
pydocstyle = "^6.1.1"
isort = "^5.10.1"
mypy = "^0.971"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
